--- a/01-hello/01-env/static-html-react.html
+++ b/01-hello/01-env/static-html-react.html
@@ -10,7 +10,7 @@
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
     <script type="text/javascript">
 const root = ReactDOM.createRoot(document.getElementById('root'));
-root.render(React.createElement('h1', null, '高木涼!'));
+root.render(React.createElement('h1', null, 'React works!'));
 </script>
   </body>
 </html>
